# SpaceFormer

./: .gitignore  .readthedocs.yaml  pyproject.toml  readme.md  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  contact.rst  index.rst  installation.rst  tutorials.rst
docs/source/spaceformer/: modules.rst
docs/source/steamboat/: modules.rst
docs/source/tutorial_nbs/: codex_analysis_across_samples.ipynb  codex_analysis_one_sample.ipynb  codex_training.ipynb  tiny_simulation_example.ipynb
docs/source/tutorial_nbs/log/: log.txt
notebooks/: codex_analysis_across_samples.ipynb  codex_analysis_one_sample.ipynb  codex_training.ipynb
spaceformer/: __init__.py  benchmarks.py  data.py  dataset.py  model.py  tools.py  utils.py
spaceformer/legacy/: const.py  covet.py  dataset.py  model.py  model_0.py  utils.py
steamboat/: __init__.py  dataset.py  model.py  tools.py  utils.py
